--- a/index.html
+++ b/index.html
@@ -132,15 +132,14 @@ a:visited {
 
       <p class="w3-text-grey">The diagram on the right depicts the DeepDECS controller synthesis process, 
              including its four inputs. The first is a discrete-time Markov Chain (DTMC) modelling the behaviour of the
-             autonomous system within its application (assuming perfect perception); the second is a set of requirements specified in probabilistic computation tree logic (PCTL). 
-             The third input is a pre-trained perception DNN that will be utilised in the autonomous system, 
-             and the fourth is a representative test dataset for this DNN. 
-             These last two inputs are utilised, along with \(n\) verification methods, 
-             in Stage 1 ('DNN uncertainty quantification') of DeepDECS to derive a set of \(2^{n}\) confusion matrices. 
-             These confusion matrices are then used to estimate the DNN classification/misclassification probabilities  
-             for an augmented, DNN-perception DTMC obtained automatically in Stage 2 ('Model augmentation') of DeepDECS. 
-             The augmented model contains an accurate representation of the imperfect DNN perception component. 
-             Finally, Stage 3 ('Controller synthesis') of DeepDECS employs probabilistic model checking techniques
+             autonomous system within its application (assuming perfect perception); the second is a set of requirements
+             specified in probabilistic computation tree logic (PCTL). The third input is a pre-trained perception DNN that
+             will be utilised in the autonomous system, and the fourth is a representative test dataset for this DNN. 
+             These last two inputs are utilised, along with \(n\) verification methods, in Stage 1 ('DNN uncertainty quantification')
+             of DeepDECS to derive a set of \(2^{n}\) confusion matrices. These confusion matrices are then used to estimate the DNN
+             classification/misclassification probabilities  for an augmented, DNN-perception DTMC obtained automatically in Stage 2
+             ('Model augmentation') of DeepDECS. The augmented model contains an accurate representation of the imperfect DNN
+             perception component. Finally, Stage 3 ('Controller synthesis') of DeepDECS employs probabilistic model checking techniques
              to generate the autonomous system controller synthesis.</p>
     </div>
     <div class="w3-center image-centre">
