--- a/index.html
+++ b/index.html
@@ -141,8 +141,10 @@ a:visited {
       <embed style='height: 95%; width: 95%; object-fit: contain' src="images/DeepDECS-approach.png"/>
     </div>
   </div>
+  <DIV STYLE="background-color:#000000; height:6px; width:100%;">
 </div>
 
+<DIV STYLE="background-color:#000000; height:6px; width:100%;">
 <!-- Grid 2: Case Studies -->
 <div class="w3-light-grey w3-padding-32 w3-container w3-large">
   <div class="row centre-div">
@@ -183,20 +185,24 @@ a:visited {
         </p>    
     </div>
   </div>
+  <DIV STYLE="background-color:#000000; height:6px; width:100%;">
 </div>
 
+<!-- <DIV STYLE="background-color:#000000; height:10px; width:100%;"> -->
 <!-- Grid 3: Github repo -->
-<div class="w3-row-padding w3-padding-32 w3-container w3-large">
+<div class="w3-padding-32 w3-container w3-large">
   <div class="row centre-div">
     <div class="text-left">
       <h1>Github repository</h1>
       <p class="w3-text-grey">
-        An <a href="https://github.com/ccimrie/DeepDECS/tree/master/augment_tool" target="_blank">augment tool</a> that automates Stage 2 of DeepDECS, a <a href="https://github.com/ccimrie/DeepDECS/tree/master/tutorial" target="_blank">DeepDECS tutorial</a>, and all the models, DNNs, datasets, etc from the two case studies are freely available in our <a href="https://github.com/ccimrie/DeepDECS" target="_blank">Github repo</a>.
+        An <a href="https://github.com/ccimrie/DeepDECS/tree/master/augment_tool" target="_blank">augment tool</a> that automates Stage 2 of DeepDECS, a <a href="https://github.com/ccimrie/DeepDECS/tree/master/tutorial" target="_blank">DeepDECS tutorial</a>, and all the models, DNNs, datasets from the two <a href="https://github.com/ccimrie/DeepDECS/tree/master/case_studies" target="_blank">case studies</a> are freely available in our <a href="https://github.com/ccimrie/DeepDECS" target="_blank">Github repo</a>.
       </p>
     </div>
   </div>
+  <DIV STYLE="background-color:#000000; height:6px; width:100%;">
 </div>
 
+  <!-- Grid 4: acknowledgements -->
 <div class="w3-light-grey w3-padding-32 w3-container w3-large">
   <div class="row centre-div">
     <div class="text-right">
@@ -207,7 +213,6 @@ a:visited {
     </div>
   </div>
 </div>
-
 
 <!-- Footer -->
 <!-- <footer class="w3-container w3-padding-64 w3-center w3-opacity">  
