--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ a:visited {
     <div class="text-left">
       <h1>Github repository</h1>
       <p class="w3-text-grey">
-        An <a href="https://github.com/ccimrie/DeepDECS/tree/master/augment_tool" target="_blank">augment tool</a> that automates Stage 2 of DeepDECS, a <a href="https://github.com/ccimrie/DeepDECS/tree/master/tutorial" target="_blank">DeepDECS tutorial</a>, and all the models, DNNs, datasets from the two <a href="https://github.com/ccimrie/DeepDECS/tree/master/case_studies" target="_blank">case studies</a> are freely available in our <a href="https://github.com/ccimrie/DeepDECS" target="_blank">Github repo</a>.
+        A <a href="https://github.com/ccimrie/DeepDECS/tree/master/augment_tool" target="_blank">model augmentation tool</a> that automates Stage 2 of DeepDECS, a <a href="https://github.com/ccimrie/DeepDECS/tree/master/tutorial" target="_blank">DeepDECS tutorial</a>, and all the models, DNNs, datasets from the two <a href="https://github.com/ccimrie/DeepDECS/tree/master/case_studies" target="_blank">case studies</a> are freely available in our <a href="https://github.com/ccimrie/DeepDECS" target="_blank">Github repo</a>.
       </p>
     </div>
   </div>
